<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#718792"

    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.sumeet.prettychat.LoginActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_marginBottom="156dp">

        <EditText
            android:id="@+id/login_email"
            style="@style/style_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_pass"
            style="@style/style_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:password="true" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/button_style"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:hint="@string/submit" />

    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/login_to_account"
        android:textSize="24sp" />

</RelativeLayout>
