<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#718792"
    android:orientation="vertical"
    tools:context="com.example.sumeet.prettychat.RegisterActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/weLcomeReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:text="Register  new Account"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="71dp"
        tools:ignore="HardcodedText" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="68dp">
        <EditText
            android:id="@+id/UserName"
            style="@style/style_edittext"
            android:inputType="text"
            android:hint="@string/UserName" />

        <EditText
            android:id="@+id/reg_emai_edit"
            style="@style/style_edittext"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/reg_pass_edit"
            style="@style/style_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/reg_submit_btn"
            style="@style/button_style"
            android:gravity="center"
            android:hint="@string/submit" />

    </LinearLayout>


</RelativeLayout>
